--- a/tasks/monitoring/zabbix.yml
+++ b/tasks/monitoring/zabbix.yml
@@ -3,7 +3,7 @@
 - name: Configure zabbix userparameters
   include_role:
     name: zabbix-agent
-    tasks_from: types/userparameter.yml
+    tasks_from: types/user_parameter
   vars:
     zabbix_agent__userparameter:
       name: orangepi
