--- a/tasks/monitoring/zabbix.yml
+++ b/tasks/monitoring/zabbix.yml
@@ -10,13 +10,13 @@
       comment: Theses items get the hardware information of the Odroid
       userparameters:
         - key: orangepi.cpu.temperature
-          command: /bin/bash -c "test -f /sys/class/thermal/thermal_zone0/temp && cat /sys/class/thermal/thermal_zone0/temp || echo -n 'ZBX_NOTSUPPORTED'"
+          command: cat /sys/class/thermal/thermal_zone0/temp 2>&1 | awk '{ if (match($1, /^[0-9.]+$/)) { print $1 } else { print "ZBX_NOTSUPPORTED" > "/dev/stderr" } }'
           comment: Get CPU core temperature. exemple "45622" for 45.6 C
         - key: orangepi.cpu.frequency
           command: /usr/bin/env cat /sys/devices/system/cpu/cpu0/cpufreq/cpuinfo_cur_freq
           comment: Get CPU current frequency
-          sudo: True
+          sudo: true
           sudo_user: root
-          sudo_group: root
+          sudo_command: /usr/bin/env cat /sys/devices/system/cpu/cpu0/cpufreq/cpuinfo_cur_freq
       state: present
   tags: ['odroid', 'odroid-monitoring']
